[package]
name = "simple-socket"
version = "0.1.0"
authors = ["Dmitrii Goriunov <goriunovd@gmail.com>"]

[dependencies]
fnv = "1.0.6"
mio = "0.6"
http-muncher = "0.3"
sha1 = "0.6.0"
base64 = "0.9.2"


# release build: cargo build --release && strip --strip-debug target/release/simple-socket
[profile.release]
lto = true
panic = 'abort'
opt-level = 3

