[package]
name = "socket"
version = "0.1.0"
authors = ["Dmitrii Goriunov <goriunovd@gmail.com>"]

[dependencies]
mio = "0.6"
slab = "0.4"

[lib]
name = "socket"
path = "src/lib.rs"

# release build: cargo build --release && strip --strip-debug target/release/simple-socket
[profile.release]
debug = false
lto = true
panic = 'abort'
opt-level = 3


